2008-11-01  higepon  <higepon@users.sourceforge.jp>

        * Arithmetic.cpp : Implemented +, -, *, /, >, >=, <, <=, = between Fixnum and Rational.

        * Rational.h : Added.

        * configure.ac: Added GMP lib check.

2008-10-31  higepon  <higepon@users.sourceforge.jp>

        * 0.0.7 released.

2008-10-30  higepon  <higepon@users.sourceforge.jp>

        * PortProcedures.cpp (statMtimeEx): Added stat-mtime.

        * scripts/pre-compile-r6rs.scm: Added.

2008-10-29  higepon  <higepon@users.sourceforge.jp>

        * tools/psyntax-r6rs/rev10_to_10/psyntax/expander.ss (psyntax): Updated to newest version which is found on IronScheme.

2008-10-28  higepon  <higepon@users.sourceforge.jp>

        * Remove -b option. It becomes default behavior of Mosh.

        * VM.cpp (getStackTrace): Fixed the getStackTrace() bug.

        * PortProcedures.cpp (getStringNEx): Added get-string-n.

2008-10-27  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (cput-shift!): Cut off (SHIFT n m) instruction when m == 0.
                       (pass3/let-frame-size): Added.

        * VM.cpp (VM::expandStack): Added auto stack expansion when stack is overflow.

2008-10-25  higepon  <higepon@users.sourceforge.jp>

        * complation of Mosh and loading speed becomes much Faster with Fasl.

        * Changed the way to precompile and load psyntax "embeded way" to "fasl embeded way".

        * VM.cpp : Changed top-level prefix for making it valid symbol.

        * TextualOutputPort.cpp (TextualOutputPort::putDatum): Fixed the bug of writing compiler-insn.

2008-10-24  higepon  <higepon@users.sourceforge.jp>

        * scripts/binary2c.scm (main): Added for Fasl.

        * PortProcedures.cpp (getU8Ex): Fixed the EOF bug.
                     (openInputFileEx): Added open-input-file.

        * library.scm (condition-printer): Fixed the double fault bug.

        * UtilityProcedures.cpp (makeInstructionEx): Added make-compiler-instruction and make-instruction.
