@@ -79,6 +79,7 @@ public:
         CompoundCondition           = Type<27>::VALUE,
         ObjectPointer               = Type<28>::VALUE, // used only debug mode
         Rational                    = Type<29>::VALUE,
+        Flonum                      = Type<30>::VALUE,
         forbidden_comma
     };
 };
